fixing video styling on mobile

--- a/src/components/video/Video.module.scss
+++ b/src/components/video/Video.module.scss
@@ -7,30 +7,49 @@
     width: 100%;
     margin: 0 auto;
     box-sizing: border-box;
-    display: flex;
-    margin-top: 30px;
-    @media (min-width: map.get(globalVariables.$breakPoints, "desktop")) {
-      max-width: 1400px;
-  }
-  &Col1 {
-    width: 50%;
      
+    margin-top: 70px;
+    margin-bottom: 50px;
+    @media (min-width: map.get(globalVariables.$breakPoints, "desktop")) {
+      display: flex;
+      max-width: 1400px;
+    }
+  &Col1 {
+    width: 100%;
+    @media (min-width: map.get(globalVariables.$breakPoints, "desktop")) {
+        width: 50%;
+        padding: 100px 50px;
+    }
   }
   &Col2 {
-    width: 50%;
-    padding: 40px;
+    width: 100%;
+    @media (min-width: map.get(globalVariables.$breakPoints, "desktop")) {
+        width: 50%;
+    }
   }
   &Title {
-    font-size: 5rem;
+    text-align: center;
+    font-size: 2rem;
     font-family: 'Archivo Black', 'Archivo Black Fallback';
-    line-height: 1;
+    line-height: 1.5;
     white-space: wrap;
+    @media (min-width: map.get(globalVariables.$breakPoints, "desktop")) {
+        font-size: 5rem;
+        line-height: 1;
+        text-align: left;
+    }
   }
   &Container {
-    width: 100%;
+    width: 90%;
+    margin: 0 auto;
     display: flex;
     justify-content: center;
     max-width: fit-content;
+    padding: 30px 0 0 0;
+    @media (min-width: map.get(globalVariables.$breakPoints, "desktop")) {
+        width: 100%;
+        padding: 0;
+    }
     video {
         width: 100%;
         height: auto;
